# fdutils_rs

./: Cargo.toml  README.md
data/: tasks.json
fd/: Cargo.toml  README.md  find详细使用手册.md
src/: addtask.rs  close.rs  command.rs  date.rs  list.rs  main.rs  status.rs  update.rs  view.rs
