[package]
name = "ratask"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
chrono = {version = "0.4.41", features = ["serde"]}
comfy-table = { version = "7.1.4"}
dialoguer = {version = "0.11.0"}
serde_json = {version = "1.0.140"}
serde = { version = "1.0", features = ["derive"] } 
anyhow = {version = "1.0.98"}